fix the wrap issue for tags

--- a/src/styles/PostCard.css
+++ b/src/styles/PostCard.css
@@ -89,3 +89,12 @@ h1 {
 .trash-icon-custom-size {
   font-size: 24px;
 }
+
+.tags-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.tags-container .pill-tag {
+  margin: 2px;
+}
